Fixing small style issues and accordion collapse

--- a/src/pages/Resources/Resources.scss
+++ b/src/pages/Resources/Resources.scss
@@ -1,4 +1,5 @@
 @import "../../style/_variables";
+@import "../../style/_viewports";
 
 .ResourcesPage {
   h3.title {
@@ -64,9 +65,14 @@
   flex-wrap: wrap;
   margin-top: 50px;
 
+  @include viewports(up-to small) {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+
   &--grey {
     .blocks-list__block {
-      background: $color-black;
+      background: #737373;
     }
 
     .blocks-list__block__img {
@@ -89,6 +95,11 @@
     margin-bottom: 15px;
     transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
 
+    @include viewports(up-to small) {
+      width: 138px;
+      padding: 11px;
+    }
+
     &:hover {
       transform: rotate(-2deg);
     }
@@ -98,6 +109,7 @@
       margin: 0;
       font-weight: 300;
       font-size: 1.7rem;
+      text-align: center;
     }
 
     &__img {
