--- a/src/pages/Wallet/Wallet.scss
+++ b/src/pages/Wallet/Wallet.scss
@@ -4,12 +4,23 @@
 .desktop-downloads {
   display: flex;
 
+  @include viewports(up-to small) {
+    flex-direction: column;
+  }
+
+  &__img {
+    @include viewports(up-to small) {
+      order: 1;
+    }
+  }
+
   &__items {
     min-width: 350px;
     margin-right: 15px;
 
     @include viewports(up-to small) {
       min-width: 100%;
+      order: 2;
     }
 
     &__item {
@@ -77,7 +88,7 @@
     flex: 1;
 
     @include viewports(up-to small) {
-      display: none;
+      margin-top: 10px;
     }
 
     img {
